kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: system-access
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  # ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: face-recognition-app
            port:
              number: 80

  tls:
    - secretName: default-token-mbqsk
